--- a/book/package.json
+++ b/book/package.json
@@ -21,10 +21,13 @@
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-katex": "git+https://github.com/xinetzone/hexo-katex.git",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^3.0.0",
+    "hexo-renderer-pandoc": "^0.3.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "install": "^0.13.0",
+    "npm": "^7.5.3"
   }
 }
