--- a/book/package.json
+++ b/book/package.json
@@ -26,7 +26,7 @@
     "hexo-renderer-pandoc": "^0.3.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
-    "hexo-theme-landscape": "^0.0.3",
+    "hexo-wordcount": "^6.0.1",
     "install": "^0.13.0",
     "npm": "^7.5.3"
   }
