--- a/book/_config.yml
+++ b/book/_config.yml
@@ -16,10 +16,22 @@ timezone: 'Asia/Shanghai'
 url: https://xinetzone.github.io/dao
 root: /dao/
 ## npm install hexo-abbrlink2
-### https://github.com/rozbo/hexo-abbrlink2
-permalink: :lang/:abbrlink/ # :year/:month/:day/:title/
+### https://github.com/rozbo/hexo-abbrlink
+permalink: :lang/:abbrlink.html # :year/:month/:day/:title/
+# abbrlink config
 abbrlink:
-  start: 0 # the first id, default 0
+  alg: crc32      #support crc16(default) and crc32
+  rep: hex        #support dec(default) and hex
+  drafts: false   #(true)Process draft,(false)Do not process draft. false(default) 
+  # Generate categories from directory-tree
+  # depth: the max_depth of directory-tree you want to generate, should > 0
+  auto_category:
+     enable: true  #true(default)
+     depth:        #3(default)
+     over_write: false 
+  auto_title: false #enable auto title, it can auto fill the title by path
+  auto_date: false #enable auto date, it can auto fill the date by time today
+  force: false #enable force mode,in this mode, the plugin will ignore the cache, and calc the abbrlink for every post even it already had abbrlink.
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
