--- a/book/package.json
+++ b/book/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "hexo": "^5.0.0",
-    "hexo-abbrlink2": "^1.0.2",
+    "hexo-abbrlink": "^2.2.1",
     "hexo-deployer-git": "git+https://github.com/xinetzone/hexo-deployer-git.git",
     "hexo-filter-github-emojis": "^3.0.4",
     "hexo-generator-archive": "^1.0.0",
