--- a/book/package.json
+++ b/book/package.json
@@ -22,13 +22,10 @@
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-search": "^2.4.1",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-katex": "git+https://github.com/xinetzone/hexo-katex.git",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-pandoc": "^0.3.0",
+    "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
-    "hexo-wordcount": "^6.0.1",
-    "install": "^0.13.0",
-    "npm": "^7.5.3"
+    "hexo-wordcount": "^6.0.1"
   }
 }
