--- a/book/package.json
+++ b/book/package.json
@@ -9,9 +9,10 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "5.3.0"
+    "version": "5.4.0"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "hexo": "^5.0.0",
     "hexo-abbrlink": "^2.2.1",
     "hexo-deployer-git": "git+https://github.com/xinetzone/hexo-deployer-git.git",
