--- a/book/_config.matery.yml
+++ b/book/_config.matery.yml
@@ -1,27 +1,12 @@
 # main menu navigation url and icon
-# 配置菜单导航的名称、路径和图标icon.
+# 配置新的自定义菜单导航的名称、路径和图标icon.
 menu:
-  Index:
-    url: /
-    icon: fas fa-home
-  Tags:
-    url: /tags
-    icon: fas fa-tags
-  Categories:
-    url: /categories
-    icon: fas fa-bookmark
-  Archives:
-    url: /archives
-    icon: fas fa-archive
-  About:
-    url: /about
-    icon: fas fa-user-circle
-  Contact:
-    url: /contact
-    icon: fas fa-comments
-  Friends:
-    url: /friends
-    icon: fas fa-address-book
+  Books:
+    url: /books
+    icon: fas fa-book
+  Chaos:
+    url: /chaos
+    icon: fas fa-list
   # 二级菜单写法如下
   #Medias:
   #  icon: fas fa-list
